# cli-scanner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_DEV.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
cmd/: api.go  banner.go  browser.go  crawl.go  root.go  serve.go
docs/: AGENTS.md  CLOUD_RUN_DEPLOYMENT.md  DASHBOARD_IMPROVEMENTS.md  GCP_SETUP.md  GSC_CREDENTIALS.md  GSC_INTEGRATION.md  GSC_SETUP_CHECKLIST.md  LOCAL_SETUP.md  RLS_FIX.md  STRIPE_ARCHITECTURE.md  STRIPE_FDW_SETUP.md  STRIPE_IMPLEMENTATION_SUMMARY.md  STRIPE_MIGRATION_PLAN.md  STRIPE_SETUP.md
internal/analyzer/: analyzer.go  image.go  printer.go
internal/api/: handlers.go  server.go  stripe_handlers.go
internal/crawler/: fetcher.go  manager.go  parser.go  robots.go  sitemap.go
internal/exporter/: csv.go  csv_import.go  json.go
internal/graph/: graph.go
internal/gsc/: auth.go  client.go
internal/utils/: config.go  logger.go  prompt.go  url.go
marketing/: MARKETING_MESSAGING.md  SETUP_NOTES.md  postcss.config.cjs  tailwind.config.cjs
marketing/src/: app.css  app.html
pkg/models/: gsc.go  page.go
scripts/: setup-gcp.sh  start-server.sh  sync_subscription.go  update-cloud-run-env.sh
sfrog/: __init__.py  cli.py
sfrog/analysis/: duplicates.py  graph.py  seo_checks.py
sfrog/crawler/: __init__.py  fetcher.py  manager.py  parser.py  robots.py  sitemap.py
shared/: tailwind.theme.js
supabase/: config.toml
web/: .gitignore  README.md  index.html  tailwind.config.js  vite.config.js
web/src/: App.svelte  (+1 more)
(+44 files in other folders)
